--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: DialerContract
     network: rinkeby
     source:
-      address: '0x3067c562a42e7d07e61425e246504a1f245a96c2'
+      address: '0xd847ce6e90cb1add5b7eb8ba7e50ae7b66ddb148'
       abi: DialerContract
-      startBlock: 10727200
+      startBlock: 10810001
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -53,6 +53,8 @@ dataSources:
           handler: logSetPool
         - event: LogUpdatePool(indexed uint256,uint64,uint256,uint256)
           handler: logUpdatePool
+        - event: AddMultiplier(uint16,uint64)
+          handler: addMultiplier
 templates:
   - kind: ethereum/contract
     name: CloneRewarderTime
